--- a/views/html/index.html
+++ b/views/html/index.html
@@ -3,6 +3,16 @@
 	<title>Игра в слова</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 	<link rel="stylesheet" href="/static/css/style.css">
+
+
+
+
+	<link rel="apple-touch-icon" href="/static/img/favicons/apple-touch-icon.png" sizes="180x180">
+	<link rel="icon" href="/static/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
+	<link rel="icon" href="/static/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
+	<link rel="icon" href="/static/img/favicons/favicon.ico">
+
+	<link rel="manifest" href="/static/img/favicons/manifest.json">
 </head>
 <body>
 
