--- a/views/html/templates/template.html
+++ b/views/html/templates/template.html
@@ -8,14 +8,27 @@
             <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
             <title>Template</title>
 
+
+
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+            <link rel="stylesheet" href="/static/css/style.css">
+        
+        
+        
+        
+            <link rel="apple-touch-icon" href="/static/img/favicons/apple-touch-icon.png" sizes="180x180">
+            <link rel="icon" href="/static/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
+            <link rel="icon" href="/static/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
+            <link rel="icon" href="/static/img/favicons/favicon.ico">
+        
+            <link rel="manifest" href="/static/img/favicons/manifest.json">
 
         </head>
         <body>
 {{end}}
-{{define "content"}}
+{{define "navigation"}}
             <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-                <a class="navbar-brand" href="/">Portfolio</a>
+                <a class="navbar-brand" href="/">wordgame</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -23,7 +36,7 @@
                 <div class="collapse navbar-collapse" id="navbarsExampleDefault">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="/reactPage">react Page</a>
+                            <a class="nav-link" href="/play">Play</a>
                         </li>
 
                         <li class="nav-item">
@@ -40,25 +53,31 @@
                     </ul>
                 </div>
             </nav>
+{{end}}
+{{ define "contentStart"}}
             <br>
             <br>
             <br>
             <main role="main" class="container">
 
-                <div class="starter-template">
-                    <h1>Header</h1>
-                    <p class="lead">text</p>
-                </div>
-
-            </main>
 
 {{end}}
-{{define "footer"}}
+{{ define "contentEnd"}}
+
+            </main>
+{{end}}
+
+{{define "scripts"}}
             <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
             <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 
 
+            <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+            <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+            <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+{{end}}
+{{define "footer"}}
         </body>
     </html>
 {{end}}
