--- a/views/html/play.html
+++ b/views/html/play.html
@@ -19,7 +19,7 @@
 
 
 
-<script type="text/babel" src="/static/js/index.js" ></script>
+<script type="text/babel" src="/static/js/play.js" ></script>
 {{template "footer"}}
 
 
